--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,19 @@
       <scope>test</scope>
     </dependency>
     
+    <!-- webSocket -->
      <dependency>  
         <groupId>javax</groupId>  
         <artifactId>javaee-api</artifactId>  
         <version>7.0</version>  
         <scope>provided</scope>  
     </dependency>  
-  
+    <!-- fastjson -->
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.16</version>
+    </dependency>
   </dependencies>
   
   <build>
